# XDUCS-DataVis24

./: .env  .eslintrc.cjs  README.md  XDUCS-DataVis24.code-workspace  env.d.ts  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
data_preprocess/01-daily-temperature/: README.txt  daily-minimum-temperatures.csv
data_preprocess/03-geodata/: CityData.csv  README.md
public/data/1/: daily-minimum-temperatures.json
public/data/3/: data.json
public/data/4/: road10.geojson
src/components/ChinaVisLearning/: LearnerInfo.vue  LearnerMethodPref.vue  LearnerPortrait.vue  (+1 more)
src/router/: index.ts
src/views/: ChinaVisLearningView.vue  ChinaVisTrafficView.vue  DailyTemperatureView.vue  GeodataView.vue  HomeView.vue  SpatialPlotView.vue
src_python/: Justfile  README.md  pyproject.toml
src_python/01-daily-temperature/: preprocess.py
src_python/03-geodata/: data.json  preprocess.ipynb
src_python/04-chinavis-2023-problem-1/migrations/: 00-parse_json_strings.js
src_python/04-chinavis2023-problem-1/: Justfile  init.sql
src_python/04-chinavis2023-problem-1/analyze/: 00-clean.ipynb  merge_geojson.py  road10.geojson
src_python/04-chinavis2023-problem-1/analyze/cleaned_data/: README
src_python/04-chinavis2023-problem-1/analyze/data/: README
src_python/04-chinavis2023-problem-1/sql/: 10-view-overspeed.sql  11-view-accel.sql
src_python/05-chinavis2024-problem-1/: 00-init.sql  Justfile
src_python/05-chinavis2024-problem-1/analyze/: 00-clean.ipynb  10-rank.ipynb  11-problem.ipynb  12-student.ipynb
src_python/05-chinavis2024-problem-1/analyze/data/: README
(+21 files in other folders)
