[project]
name = "xducs-datavis24"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "clickhouse-sqlalchemy>=0.3.2",
    "fastapi[standard]>=0.115.0",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "pandarallel>=1.6.5",
    "pandas>=2.2.3",
    "pyarrow>=18.0.0",
    "pydantic>=2.9.2",
    "sqlalchemy>=2.0.36",
    "tqdm>=4.67.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
